--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -52,8 +52,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InspectStart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InspectStart.Designer.cs">
+      <DependentUpon>InspectStart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="InspectStart.resx">
+      <DependentUpon>InspectStart.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
