--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentsAction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CommentsAction.Designer.cs">
+      <DependentUpon>CommentsAction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CommentsAction.resx">
+      <DependentUpon>CommentsAction.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InspectStart.resx">
       <DependentUpon>InspectStart.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="musk-logo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
